rust/macros/tests/invalid/target/rls/debug/deps/two_arrows_rs-0772795ec66f4b5d.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\two_arrows_rs-0772795ec66f4b5d.rmeta: two-arrows.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\two_arrows_rs-0772795ec66f4b5d.d: two-arrows.rs

two-arrows.rs:
